// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`-h 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"usage: res-to-ts [--help] [--check] FILE [… FILE]

Converts resources to be usable as TypeScript files.
"
,
}
`;

exports[`--help 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"usage: res-to-ts [--help] [--check] FILE [… FILE]

Converts resources to be usable as TypeScript files.
"
,
}
`;

exports[`invalid option 1`] = `
{
  "exitCode": 1,
  "stderr": 
"error: unrecognized option: --invalid
usage: res-to-ts [--help] [--check] FILE [… FILE]

Converts resources to be usable as TypeScript files.
"
,
  "stdout": "",
}
`;

exports[`missing rootDir 1`] = `
{
  "exitCode": 1,
  "stderr": 
"error: missing root directory after '--rootDir'
usage: res-to-ts [--help] [--check] FILE [… FILE]

Converts resources to be usable as TypeScript files.
"
,
  "stdout": "",
}
`;

exports[`missing outDir 1`] = `
{
  "exitCode": 1,
  "stderr": 
"error: missing output directory after '--outDir'
usage: res-to-ts [--help] [--check] FILE [… FILE]

Converts resources to be usable as TypeScript files.
"
,
  "stdout": "",
}
`;
